--- a/index.html
+++ b/index.html
@@ -34,29 +34,29 @@
 			
 			<link type="text/css" rel="StyleSheet" href="style.css" media="screen"/>
 			
-			<div>
-			<img
+			<div class="laimagen">
+			<h1>
+				<img
 			class="estilo1"  
 			src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png"
 			alt="Logotype of google page>
 		</img>
-
-		</div>
+	</h1>
+	</div>
+		
 
 	
 		<div class="barrabusqueda">
 	<form class="formulariodebarra" action="#" method="POST">
 
 			<div class="inputdebarra">
-				<input class="" type="search" placeholder="">
+
+				<input class="inserta" type="search" placeholder="">
 			</div>
+			
 			<div>
-				<input class="botonclick" type="submit" value="Buscar con Google"/>
-				<input class="botonclick" type="submit" value="Me siento con suerte"/>
-			</div>
-				
-			</div>
-	
+				<input class="botonclick" type="submit" value="Buscar con Google" />
+				<input class="botonclick" type="submit" value="Me siento con suerte" />
 			</div>
 
 	</form>
