--- a/index.html
+++ b/index.html
@@ -55,11 +55,18 @@
 			</div>
 			
 			<div>
-				<input class="botonclick" type="submit" value="Buscar con Google" />
-				<input class="botonclick" type="submit" value="Me siento con suerte" />
+				<input class="botonclick1" type="submit" value="Buscar con Google" />
+				<input class="botonclick2" type="submit" value="Me siento con suerte" />
 			</div>
 
 	</form>
+
+		</div>
+		<div id="unicotexto">
+
+			<p class="Ofrecido">
+				Ofrecido por Google en: <a href="URL">English</a>
+			</p>
 
 		</div>
 	
@@ -73,5 +80,33 @@
 		</div>
 
 		</head>
-<!-- FIn del contenido central-->
+<!-- Fin del contenido central-->
+
+<!-- Abrete footer-o!--> 
+<footer>
+	<div class="datosfinales1">
+		<ul>
+			<li>
+				<a href="URL">Venezuela</a>
+				<a href="URL">Publicidad</a>
+				<a href="URL">Negocios</a>
+				<a href="URL">Sobre Google</a>
+				<a href="URL">Cómo funciona la busqueda</a>
+			</li>
+		</ul>		
+	</div>
+
+	<div class="datosfinales2">
+		<ul>
+			<li>
+				<a href="URL">Privacidad</a>
+				<a href="URL">Condiciones</a>
+				<a href="URL">Preferencias</a>
+			</li>
+			
+		</ul>
+	</div>
+
+</footer>
+<!-- Cierrate footer-o!--> 
 </html>
