--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 				<input class="inserta" type="search" placeholder="">
 			</div>
 			
-			<div>
+			<div class="opciones">
 				<input class="botonclick1" type="submit" value="Buscar con Google" />
 				<input class="botonclick2" type="submit" value="Me siento con suerte" />
 			</div>
