--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
 			</div>
 			
 			<div class="opciones">
-				<input class="botonclick1" type="submit" value="Buscar con Google" />
-				<input class="botonclick2" type="submit" value="Me siento con suerte" />
+				<input class="botonclick" type="submit" value="Buscar con Google" />
+				<input class="botonclick" type="submit" value="Me siento con suerte" />
 			</div>
 
 	</form>
@@ -84,6 +84,7 @@
 
 <!-- Abrete footer-o!--> 
 <footer>
+	<div class="cajadefooter">
 	<div class="datosfinales1">
 		<ul>
 			<li>
@@ -106,7 +107,7 @@
 			
 		</ul>
 	</div>
-
+</div>
 </footer>
 <!-- Cierrate footer-o!--> 
 </html>
